css/styles.css
/* Body styles */
body {
  background-color: rgb(114, 34, 34);
  font-family: monospace, sans-serif;
}

/* Remove bullet points from ul */
ul {
  list-style: none;
}

/* Header & Anchor styles*/
h1,
a {
  /* Border properties */
  border-style: solid;
  border-color: red;
  /* Box display */
  display: block;
  /* Smooth resizing */
  overflow: hidden;
  white-space: nowrap;
  /* Center text in box */
  text-align: center;
}

/* Header style */
h1 {
  /* Color and Font */
  font-family: monospace;
  color: rgba(160, 78, 228, 0.89);
  font-size: 50px;
  /* Shadows */
  text-shadow: 7px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black,
    -1px 1px 0 black;

  box-shadow: 10px 5px 100px rgba(0, 0, 0, 0.5);
  /*Padding & Border */
  padding: 20px;
  border-radius: 5cm 2cm 5cm 2cm;
  border-width: 20px 10px 10px 10px;
  width: 450px;
  margin: 20px auto 100px auto;
}

a {
  /* Color and Font */
  color: rgb(218, 49, 161);
  font-size: 30px;
  font-weight: 550;
  background-color: #111010;
  /* Shadows */
  text-shadow: 1px 1px 0 darkblue, -1px -1px 0 darkblue, 1px -1px 0 purple,
    -1px 1px 0 purple;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5),
    -2px -2px 50px rgba(255, 255, 255, 0.5);
  /* Remove underline */
  text-decoration: none;
  /* Border, padding and margin */
  border-radius: 30px;
  padding: 20px;
  width: 300px;
  margin: 30px auto 30px auto;
}

/* Anchor hover effect */
a:hover {
  background-color: rgb(33, 33, 39);
  color: green;
  /* Hover transition*/
  transition: background-color 0.2s, color 0.3s;
}

